--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "milon/barcode": "^8.0",
         "stripe/stripe-php": "^7.100"
     },
     "require-dev": {
